@@ -8,7 +8,7 @@
  "HTML Tidy for Mac OS X (vers 12 April 2006), see www.w3.org" /> 
 
  <title>PHP Weathermap 
-v0.941 
+v0.95 
  - Targets Reference</title> 
 <style type="text/css" media="print"> 
 /*<![CDATA[*/ 
@@ -41,9 +41,9 @@ a { color: black; text-decoration: underline; font-weight: normal;}
 
 <div id="header"> 
  <h1>PHP Weathermap 
-v0.941 
+v0.95 
 </h1> 
- <h4>Copyright &copy; 2005-2007 Howard Jones, <tt><a 
+ <h4>Copyright &copy; 2005-2008 Howard Jones, <tt><a 
 href="mailto:howie@thingy.com">howie@thingy.com</a></tt>. (<a 
 href="http://www.network-weathermap.com/">Website</a>)</h4> 
 </div> 
