@@ -50,6 +50,7 @@
         <a href="#LINK_OUTCOMMENT">OUTCOMMENT</a>
         <a href="#LINK_COMMENTFONT">COMMENTFONT</a>
         <a href="#LINK_COMMENTPOS">COMMENTPOS</a>
+        <a href="#LINK_SPLITPOS">SPLITPOS</a>
         <a href="#LINK_COLORS">*COLOR</a>
         <a href="#LINK_INFOURL">INFOURL</a>
         <a href="#LINK_OVERLIBGRAPH">OVERLIBGRAPH</a>
@@ -713,6 +714,16 @@ of the direction of the link. 'angled' rotates the box to follow the directiong 
 <div class="description">
 <p xmlns="http://www.w3.org/1999/xhtml" xmlns:xi="http://www.w3.org/2001/XInclude">Specify the position along the link used for drawing the <a href="#LINK_INCOMMENT">INCOMMENT</a> and <a href="#LINK_OUTCOMMENT">OUTCOMMENT</a> text.</p><p xmlns="http://www.w3.org/1999/xhtml" xmlns:xi="http://www.w3.org/2001/XInclude">The positions are specified as a percentage position along the link, like <a href="#LINK_BWLABELPOS">BWLABELPOS.</a> The default positions are equivalent to <strong>COMMENTPOS 95 5</strong>.</p><changes xmlns="http://www.w3.org/1999/xhtml" xmlns:xi="http://www.w3.org/2001/XInclude"> 
  <change version="0.92">Added COMMENTPOS</change> 
+ </changes> 
+</div>
+</div>
+                <div class="referenceentry">
+<h2><a name="LINK_SPLITPOS">SPLITPOS</a></h2>
+<div class="definition">SPLITPOS <em class="meta">position</em>
+</div>
+<div class="description">
+<p xmlns="http://www.w3.org/1999/xhtml" xmlns:xi="http://www.w3.org/2001/XInclude">Specify the position along the link used for drawing the <a href="#LINK_INCOMMENT">INCOMMENT</a> and <a href="#LINK_OUTCOMMENT">OUTCOMMENT</a> text.</p><changes xmlns="http://www.w3.org/1999/xhtml" xmlns:xi="http://www.w3.org/2001/XInclude"> 
+ <change version="0.95">Added SPLITPOS</change> 
  </changes> 
 </div>
 </div>
